<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_SetConfigData" Id="{a1f059fd-9f8c-459d-95ef-3684f8f0c8cd}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SetConfigData
VAR_INPUT
	// Gerenal
	// Concrete Controller
	// Inline Mixer
	_f_MI1_Override_Max_Speed : REAL;
	
	// Concrete Pump
	_f_CP1_Max_Flowrate : REAL;
	_f_CP1_Check_Flowrate : REAL;
	_t_CP1_Check_Duration : INT;
	
	// Admixture pump (High)
	_n_AP1_Max_Flowrate : REAL;
	_n_AP1_Check_Flowrate : REAL;
	_n_AP1_Check_Duration : INT;
	_n_AP1_Flush_Flowrate : REAL;
	//_f_AP1_Check_Mass : REAL;
	
	// Admixture pump (low)
	_n_SP1_Max_Flowrate : REAL;
	_n_SP1_Check_Flowrate : REAL;
	_t_SP1_Check_Duration : INT;
	//_f_SP1_Check_Mass : REAL;
	
END_VAR
VAR_OUTPUT
END_VAR

VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// ***********************************************************************************
//
// Müller-steinag Gruppe, Kandergrien Einigen, CH-3646 Bern
// ETH Zurich, Building HIF E26, Laura-Hezner-Weg 7, CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Digital Casting System 
// FUNCTION    :  Set all default/Constant data for the process
// AUTHOR      :  Weiting Chen
// EMAIL       :  chenw@usi.ch
// Copyright   :  USI Mendrisio; ETH Zürich; Müller-steinag Gruppe (CH) 2023
// Contributor :  
//
// ***********************************************************************************
// 

// Setter for the componenets Config
// Concrete Controller (CC1)

// Inline Mixer (MI1)

// Concrete Pump 1
GVL.f_CP1_Max_Flowrate := _f_CP1_Max_Flowrate;
GVL.f_CP1_Check_Flowrate := _f_CP1_Check_Flowrate;
GVL.t_CP1_Check_Duration := INT_TO_TIME(_t_CP1_Check_Duration)*1000;
GVL.n_CP1_Flush_Flowrate := (_f_CP1_Max_Flowrate) / 2;

// Admixture pump 1 (High)
GVL.n_AP1_Max_Flowrate := _n_AP1_Max_Flowrate;
GVL.n_AP1_Check_Flowrate := _n_AP1_Check_Flowrate;
GVL.t_AP1_Check_Duration := INT_TO_TIME(_n_AP1_Check_Duration)*1000;
GVL.n_AP1_Flush_Flowrate := (_n_AP1_Max_Flowrate )/ 2;

// Admixture pump (low)
GVL.n_SP1_Max_Flowrate := _n_SP1_Max_Flowrate;
GVL.n_SP1_Check_Flowrate := _n_SP1_Check_Flowrate;
GVL.t_SP1_Check_Duration := INT_TO_TIME(_t_SP1_Check_Duration)*1000;
GVL.n_SP1_Flush_Flowrate := (_n_SP1_Max_Flowrate) / 2;

]]></ST>
    </Implementation>
    <LineIds Name="FB_SetConfigData">
      <LineId Id="39" Count="39" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>