 < ?xml version = "1.0" encoding = "utf-8"? >
 < TcPlcObject Version = "1.1.0.1" ProductVersion = "3.1.4024.11" >
  < POU Name = "P_Laptop_Operate" Id = "{983d58cf-af0d-4db9-a1a2-5f64ec0638c2}" SpecialFunc = "None" >
    < Declaration > < ![CDATA[PROGRAM P_Laptop_Operate
VAR

	fb_MC_SetPosition: FB_SoEAX5000SetPositionOffset;
	pos: LREAL;
	Mixer1_2: FB_Mixer1_2;
	Analog: FB_Analog;
	SafetyReset: BOOL;
	b_Enable: BOOL;
	b_Reset: BOOL;

	Test: MC_ReadStatus;

	fb_SetOutputDataToIO: FB_SetOutputDataToIO;
	fb_getOutputData: FB_GetOutputData;
	fb_setConfig: FB_SetConfigData;

	//
	b_Safety_Reset: BOOL;
	b_Timer_Rest: BOOL;
	t_CC1_Time_Safety_Rest: TIME := T#5s; // wait 5s for controller restart
	fb_CC1_Trigger_Safety_On: R_TRIG;
	fb_CC1_Trigger_Safety_Off: R_TRIG;
	fb_CC1_Timer_Safety: TON;


END_VAR
]] > < / Declaration >
    < IMPLEMENTATION >
      < ST > < ![CDATA[ // ***********************************************************************************
//
// Müller-steinag Gruppe, Kandergrien Einigen, CH-3646 Bern
// ETH Zurich, Building HIF E26, Laura-Hezner-Weg 7, CH-8093 Zürich
//
// ***********************************************************************************
//
// PROJECT: A061 Digital Casting System
// FUNCTION: Laptop operate process
// AUTHOR: Weiting Chen
// EMAIL: chenw@usi.ch
// Copyright: USI Mendrisio; ETH Zürich; Müller-steinag Gruppe (CH) 2024
//
// ***********************************************************************************


b_Timer_Rest := GVL_RESD.b_Concrete_Controller_reset;

// controller reset trigger
fb_CC1_Timer_Safety(
					IN := b_Timer_Rest,
					PT := t_CC1_Time_Safety_Rest);

fb_CC1_Trigger_Safety_On(clk := fb_CC1_Timer_Safety.IN);
fb_CC1_Trigger_Safety_Off(clk := fb_CC1_Timer_Safety.Q);
// b_Safety_Reset:=FALSE;
IF fb_CC1_Trigger_Safety_On.Q THEN
	b_Safety_Reset := TRUE;
END_IF
IF fb_CC1_Trigger_Safety_Off.Q THEN
	b_Safety_Reset := FALSE;
	GVL_RESD.b_Concrete_Controller_reset := FALSE;
END_IF
GVL_IO.ob_CC1_Safety_Reset := b_Safety_Reset OR GVL_IO.ib_CC1_Button_Reset;
 / // /

// Concrete Conctroller enable
P_CC1_Enable( b_set_run := GVL_RESD.b_Concrete_Controller_enable );


 / / ***********************************************************************************
// Set Process Configuration
 / / ***********************************************************************************

fb_setConfig(
    // Gerenal
    // Concrete Controller
    // Inline Mixer
    _f_MI1_Override_Max_Speed := 120,

    // Concrete Pump
    _f_CP1_Max_Flowrate := INT_TO_REAL(GVL_RESD.n_Concrete_Pump_Max_Speed) *
                                    GVL_RESD.f_Concrete_Pump_dosing_volume,
    _f_CP1_Check_Flowrate := GVL_RESD.f_Concrete_Pump_Check_Flowrate,
    _t_CP1_Check_Duration := INT_TO_TIME(GVL_RESD.n_Concrete_Pump_Check_Duration * 1000),

    // Admixture pump (High)
    _n_AP1_Max_Flowrate := GVL_RESD.n_Admixture_Pump_Max_Flowrate,
    _n_AP1_Check_Flowrate := GVL_RESD.f_Admixture_Pump_Check_Flowrate,
    _t_AP1_Check_Duration := INT_TO_TIME(GVL_RESD.n_Admixture_Pump_Check_Duration * 1000),
    _n_AP1_Flush_Flowrate := GVL_RESD.f_Admixture_Pump_Flush_Flowrate,
    // _f_AP1_Check_Mass: REAL;

    // Admixture pump (low)
    _n_SP1_Max_Flowrate := GVL_RESD.n_Sup_Admixture_Pump_Max_Flowrate,
    _n_SP1_Check_Flowrate := GVL_RESD.f_Sup_Admixture_Pump_Check_Flowrate,
    _t_SP1_Check_Duration := INT_TO_TIME(GVL_RESD.n_Sup_Admixture_Pump_Check_Duration * 1000),
    // _f_SP1_Check_Mass: REAL;
    );

 / / ***********************************************************************************
// Setup IO data to PLC
 / / **********************************************************************************
fb_SetOutputDataToIO(
	// Mixer
	b_MI1_set_run := GVL_RESD.b_MI1_set_run,
	b_Ml1_Enable := GVL_RESD.b_Ml1_Enable,
	b_MI1_Curved_Speed_On := GVL_RESD.b_MI1_set_curved_speed_mode_on,
	f_MI1_Override_Speed := GVL_RESD.n_MI1_set_speed,
	f_MI1_Override_Max_Speed := GVL_RESD.f_MI1_Override_Max_Speed,

	// Concrete Pump
	b_CP1_Forward_On := GVL_RESD.b_Concrete_Pump_Forward_On,
	b_CP1_Backward_On := GVL_RESD.b_Concrete_Pump_Backward_On,
	b_CP1_Flush_On := GVL_RESD.b_Concrete_Pump_Flush_On,
	b_CP1_Check_On := GVL_RESD.b_Concrete_Pump_Check_On,
	n_CP_Flowrate_mode := TRUE,
	n_CP1_Operate_Flowrate := REAL_TO_INT(GVL_RESD.f_Concrete_Pump_Set_Flowrate * 100),
	n_CP1_Check_Flowrate := REAL_TO_INT(GVL_RESD.f_Concrete_Pump_Check_Flowrate * 100),
	n_CP1_Flush_Flowrate := REAL_TO_INT(GVL_RESD.n_Concrete_Pump_Flush_Flowrate * 100),
	f_dosing_volume := REAL_TO_INT(GVL_RESD.f_Concrete_Pump_dosing_volume * 100),

	n_CP1_max_speed := GVL_RESD.n_Concrete_Pump_Max_Speed,
	n_CP1_target_speed := GVL_RESD.n_Concrete_Pump_Set_Speed,

    // add reset button
	// Admixture pump (High)
	b_AP1_Power_On := GVL_RESD.b_Admixture_Pump_Power_On,
	b_AP1_Run := GVL_RESD.b_Admixture_Pump_Set_Run,
	b_AP1_Flush_On := GVL_RESD.b_Admixture_Pump_Flush_On,
	b_AP1_Check_On := GVL_RESD.b_Admixture_Pump_Check_On,

	n_AP1_Flowrate_mode := TRUE,
	n_AP1_Max_Flowrate := GVL_RESD.n_Admixture_Pump_Max_Flowrate,
	n_AP1_Operate_Flowrate := REAL_TO_INT(GVL_RESD.f_Admixture_Pump_Set_Flowrate * 10),
	n_AP1_Check_Flowrate := REAL_TO_INT(GVL_RESD.f_Admixture_Pump_Check_Flowrate * 10),
	n_AP1_Flush_Flowrate := REAL_TO_INT(GVL_RESD.f_Admixture_Pump_Flush_Flowrate * 10),
	n_AP1_Dosing_factor := REAL_TO_INT(GVL_RESD.f_Admixture_Pump_dosing_factor * 10),

    // add reset button
	// Admixture pump (High)
	b_SP1_Power_On := GVL_RESD.b_Sup_Admixture_Pump_Power_On,
	b_SP1_Run := GVL_RESD.b_Sup_Admixture_Pump_Set_Run,
	b_SP1_Flush_On := GVL_RESD.b_Sup_Admixture_Pump_Flush_On,
	b_SP1_Check_On := GVL_RESD.b_Sup_Admixture_Pump_Check_On,

	n_SP1_Flowrate_mode := TRUE,
	n_SP1_Max_Flowrate := GVL_RESD.n_Sup_Admixture_Pump_Max_Flowrate,
	n_SP1_Operate_Flowrate := REAL_TO_INT(GVL_RESD.f_Sup_Admixture_Pump_Set_Flowrate * 10),
	n_SP1_Check_Flowrate := REAL_TO_INT(GVL_RESD.f_Sup_Admixture_Pump_Check_Flowrate * 10),
	n_SP1_Flush_Flowrate := REAL_TO_INT(GVL_RESD.f_Sup_Admixture_Pump_Flush_Flowrate * 10),
	n_SP1_Dosing_factor := REAL_TO_INT(GVL_RESD.f_Sup_Admixture_Pump_dosing_factor * 10),
	);

 / / * **********************************************************************************
// Inline Mixer
 / / * **********************************************************************************
// mixer
// check the rest button
Mixer1_2(
	Mixer1			:= GVL.Axis_Mixer1,
	Mixer2			:= GVL.Axis_Mixer2,
	f_Velocity		:= GVL.f_MI1_MaxSpeed,
	b_JogForward	:= FALSE,
	b_JogBackwards	:= fb_SetOutputDataToIO.b_MI1_set_run,
	b_Enable		:= fb_SetOutputDataToIO.b_Ml1_Enable AND GVL_IO.ib_CC1_Safety_Ready,
	b_Reset			:= GVL_RESD.b_Concrete_Controller_reset OR GVL_IO.ib_CC1_Button_Reset,
	f_Override		:= fb_SetOutputDataToIO.f_MI1_Override_Speed
	);
	(*
	fb_MC_SetPosition(
	Axis			:= GVL.Axis_Mixer2,
	memory			:= 1,
	Feedback		:= 0); *)
pos := GVL.Axis_Mixer2.NcToPlc.ModuloActPos;
GVL.b_MI1_ReadToDrive := Mixer1_2.b_ReadyToDrive;
P_MI1_OnOff(b_set_run := fb_SetOutputDataToIO.b_MI1_set_run, );

 / / * **********************************************************************************
// Concrete Pump
 / / * **********************************************************************************

// concrete pump power control is from pump itself
P_CP1_Enable();
P_CP1_Check(b_set_run := fb_SetOutputDataToIO.b_CP1_Forward_On,
			b_check_mode_on := fb_SetOutputDataToIO.b_CP1_Check_On,
			t_check_duration := fb_setConfig._t_CP1_Check_Duration,
			);


 / / * **********************************************************************************
// Acceleration Pump
 / / * **********************************************************************************

// Acceleration Pump 1 check
P_AP1_Check(b_set_run := fb_SetOutputDataToIO.b_AP1_Run,
			b_check_mode_on := fb_SetOutputDataToIO.b_AP1_Check_On,
			t_check_duration := fb_setConfig._t_AP1_Check_Duration,
			);
// Check for Acceleration Pump 1 state
IF NOT fb_SetOutputDataToIO.b_AP1_Check_On THEN
//
// Acceleration Pump 1 On/Off
	P_AP1_OnOff(b_set_run := fb_SetOutputDataToIO.b_AP1_Run);
END_IF

 / / * **********************************************************************************
// Superplasticizer Pump
 / / * **********************************************************************************

// Superplasticizer Pump 1 Check
P_SP1_Check(b_set_run := fb_SetOutputDataToIO.b_SP1_Run,
			b_check_mode_on := fb_SetOutputDataToIO.b_SP1_Check_On,
			t_check_duration := fb_setConfig._t_SP1_Check_Duration,
			);
IF NOT fb_SetOutputDataToIO.b_SP1_Check_On THEN
	P_SP1_OnOff(b_set_run := fb_SetOutputDataToIO.b_SP1_Run);
END_IF

 / / * **********************************************************************************
// Get out put data from PLC
 / / * **********************************************************************************
fb_getOutputData(

	// CC1
	b_mode_manual := GVL_RESD.b_Operate_mode_manual,
	b_mode_laptop := GVL_RESD.b_Operate_mode_laptop,
	b_mode_robot := GVL_RESD.b_Operate_mode_robot,
	b_CC1_power_on := GVL_RESD.b_Concrete_Controller_power_on,
	n_current_mode := GVL_RESD.n_Concrete_Controller_current_mode,

	// MI1
	b_MI1_Is_Run := GVL_RESD.b_MI1_Is_Run,
	b_MI1_is_ready := GVL_RESD.b_MI1_Is_Ready,
	n_MI1_status_SpeedM1 := GVL_RESD.n_MI1_status_SpeedM1,
	n_MI1_status_SpeedM2 := GVL_RESD.n_MI1_status_SpeedM2,
	f_Status_Torque_Motor_1 := GVL_RESD.f_Status_Torque_Motor_1,
	f_Status_Torque_Motor_2 := GVL_RESD.f_Status_Torque_Motor_2,
	f_MI1_status_temperature_funnel_outlet := GVL_RESD.f_MI1_status_temperature_funnel_outlet,
	f_MI1_status_Pressure_funnel_inlet := GVL_RESD.f_MI1_status_Pressure_funnel_inlet,
	f_MI1_status_temperature_motor_1 := GVL_RESD.f_MI1_status_temperature_motor_1,
	f_MI1_status_temperature_motor_2 := GVL_RESD.f_MI1_status_temperature_motor_2,

	// CP1
	b_CP1_is_run := GVL_RESD.b_CP1_is_run,
	b_CP1_is_ready := GVL_RESD.b_CP1_is_ready,
	f_CP1_status_temperature_concrete_fresh := GVL_RESD.f_CP1_status_temperature_concrete_fresh,
	f_CP1_status_temperature_Concrete_pump := GVL_RESD.f_CP1_status_temperature_Concrete_pump,
	f_CP1_status_pressure_Concrete_pump := GVL_RESD.f_CP1_status_pressure_Concrete_pump,

	// AP1
	b_AP1_is_run := GVL_RESD.b_Admixture_Pump_is_run,
	b_AP1_is_ready := GVL_RESD.b_Admixture_Pump_is_run,

	// SP1
	b_SP1_is_run := GVL_RESD.b_Sup_Admixture_Pump_is_run,
	b_SP1_is_ready := GVL_RESD.b_Sup_Admixture_Pump_is_ready,
);
]] > < / ST >
    < / IMPLEMENTATION >
    < LineIds Name = "P_Laptop_Operate" >
      < LineId Id = "776" Count = "147" / >
      < LineId Id = "1000" Count = "0" / >
      < LineId Id = "924" Count = "1" / >
      < LineId Id = "997" Count = "2" / >
      < LineId Id = "926" Count = "69" / >
      < LineId Id = "5" Count = "0" / >
      < LineId Id = "996" Count = "0" / >
    < / LineIds >
  < / POU >
 < / TcPlcObject >
